fixtures/src/invalid/media-overlay-text-missing/OEBPS/chapter1.smil
<?xml version="1.0" encoding="UTF-8"?>
<smil xmlns="http://www.w3.org/ns/SMIL" version="3.0">
  <body>
    <seq>
      <par>
        <text src="chapter1.xhtml#nonexistent-id"/>
        <audio src="audio.mp3" clipBegin="0s" clipEnd="1s"/>
      </par>
    </seq>
  </body>
</smil>